(rule
 (target toplevel-blocks.actual)
 (deps
  (source_tree toplevel-blocks))
 (action
  (with-stdout-to
   %{target}
   (chdir
    toplevel-blocks
    (run ocamlformat-mdx-blocks --output - test-case.md)))))

(rule
 (alias runtest)
 (action
  (diff toplevel-blocks/test-case.md.expected toplevel-blocks.actual)))
